--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "axios": "^1.12.2",
+    "chalk": "^4.1.2",
+    "dotenv": "^17.3.1",
     "typescript": "^5.9.3"
   },
   "devDependencies": {
